Projet total/Assembleur/tests/bad/testfile-bad-label-5.ms
    .section text
beq %rax %rbx add